<resources>
    <string name="app_name">CleverChat</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-type Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hello">Hello</string>
    <string name="title_weather">Weather</string>
    <string name="title_contact">Contact</string>
    <string name="title_chat">Chat</string>
    <string name="title_home">Home</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="reset_instructions">Please enter the email to send
        the reset instructions to.</string>
    <string name="button_back_to_sign_in">Back To Sign In</string>
    <string name="text_email_sent">Please check your email. You will receive follow up instructions
        if there is account associated with this email.</string>
    <string name="new_chat">New Chat</string>
    <string name="chats">Chat</string>
    <string name="text_no_contact">You do not have any contact.</string>
    <string name="placeholder_email">sampleEmail@website.com</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Shared Prefs JWT</string>
    <string name="keys_prefs_dark_mode">Dark_Mode</string>
    <string name="keys_prefs_signed_in">stay_signed_in</string>
    <string name="keys_username">Username</string>
    <string name="text_search">Search</string>
    <string name="change_theme">Switch theme</string>
    <string name="no_user_found">No user found</string>
    <string name="friends">Friend</string>
    <string name="request">Request</string>
    <string name="request_sent">Sent</string>


    <!-- Live Website: https://cleverchat.herokuapp.com/api/
         LocalHost in Android Studio: http://10.0.2.2:5000/api/ -->
    <string name="base_url">https://cleverchat.herokuapp.com/api/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_chat">Create New Chat</string>
    <string name="create">Create</string>
    <string name="stay_signed_in">Stay Signed In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="whoops">Whoops!</string>
    <string name="resend_verification">Resend Email</string>
    <string name="add_participants">Add Participants</string>
    <string name="members">Members</string>
    <string name="add_members">Add New Members</string>
    <string name="add">Add</string>
    <string name="select_contacts">Select Contacts:</string>
    <string name="not_verified_text">It appears that your email has not been verified. \n\n
        Please check your email for the verification email.
        \Or click the button below to resend the verification email.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
</resources>