<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.passwordreset.PasswordReset"
    android:background="@drawable/button_gradient_color">


    <View
        android:id="@+id/view_scroll"
        android:layout_width="340dp"
        android:layout_height="618dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/text_reset_password"
        android:layout_width="192dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toTopOf="@+id/view_scroll"
        tools:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="225dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button_reset_password"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/gradient_background_1"
        android:text="@string/reset"
        android:textColor="@color/text_color"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_scroll"

        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        tools:cornerRadius="30" />

    <TextView
        android:id="@+id/text_check_email"
        android:layout_width="232dp"
        android:layout_height="97dp"
        android:text="@string/reset_instructions"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />

</androidx.constraintlayout.widget.ConstraintLayout>