<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.passwordreset.PasswordReset"
    android:background="@drawable/button_gradient_color">


    <View
        android:id="@+id/view_scroll"
        android:layout_width="340dp"
        android:layout_height="618dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/text_reset_password"
        android:layout_width="192dp"
        android:layout_height="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toTopOf="@+id/view_scroll"
        tools:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/text_check_email"
        android:layout_width="232dp"
        android:layout_height="97dp"
        android:text="@string/text_email_sent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"
        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password" />

    <Button
        android:id="@+id/button_back_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_gradient_1"
        android:text="@string/button_back_to_sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view_scroll"
        app:layout_constraintEnd_toEndOf="@+id/view_scroll"

        app:layout_constraintStart_toStartOf="@+id/view_scroll"
        app:layout_constraintTop_toBottomOf="@+id/text_check_email"
        app:layout_constraintVertical_bias="0.849"
        tools:cornerRadius="30" />

</androidx.constraintlayout.widget.ConstraintLayout>